# skorpion-mono

./: .gitattributes  .gitignore  Makefile  pyproject.toml
libs/common/: pyproject.toml
libs/common/src/common/config/: __init__.py  base.py
libs/common/src/common/exceptions/: api.py  base.py  middleware.py
libs/common/src/common/gunicorn/: __init__.py  app_options.py  application.py  config.py  logger.py
libs/common/src/common/logger/: __init__.py  config.py
services/ai/: .env  docker-compose.yml  pyproject.toml
services/ai/app/: main.py  run_main.py
services/ai/app/api/: __init__.py
services/ai/app/api/api_v1/: __init__.py
services/ai/docker-build/app/: Dockerfile
services/gateway/: .env  .env.template  .gitignore  docker-compose.yml  pyproject.toml  routes.yml  services.yml
services/gateway/app/: main.py  run_main.py
services/gateway/app/api/: __init__.py
services/gateway/app/api/api_v1/: __init__.py  healthcheck.py
services/gateway/app/api/proxy/: __init__.py
services/gateway/app/core/: config.py
services/gateway/app/core/exceptions/: __init__.py  service.py
services/gateway/docker-build/app/: Dockerfile
services/modifier/: .env  docker-compose.yml  pyproject.toml
services/modifier/app/: main.py  run
services/modifier/app/core/: config.py
services/modifier/docker-build/app/: Dockerfile
services/parser/: .env.template  docker-compose.yml  pyproject.toml
services/parser/app/: run_main.py
services/parser/app/core/: config.py
services/parser/docker-build/app/: Dockerfile
services/templater/: .env.template  docker-compose.yml  pyproject.toml
services/templater/app/: main.py
services/templater/app/core/: config.py
services/templater/docker-build/app/: Dockerfile
(+2 files in other folders)
