[project]
name = "common"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yappa-lgtm", email = "boris.ohorodnii@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.0",
    "gunicorn>=23.0.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/common"]

